--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,8 +27,14 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div class="z-10 flex relative select-none flex-row justify-center items-center py-16 px-8">
+      <div class="mx-6 sm:mx-12 italic text-[9vw] sm:text-6xl font-extrabold text-white">ben stevens</div>
+      <div class="text-xl sm:text-2xl hover:underline hover:decoration-gray-400 transition-all origin-center text-gray-300 font-medium cursor-pointer">contact</div>
+    </div>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
